codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_names_openai_api_key_from_environment.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────────────────────────╮
│  >_ Corbanu Terminal (v<V>)                                                         │
│                                                                                     │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date                       │
│ information on rate limits and credits                                              │
│                                                                                     │
│  Model:         gpt-5.4 (reasoning none, summaries auto)                            │
│  Directory: [[workspace]]                                                           │
│  Permissions:   Next turn: Custom (workspace with network access, Ask for approval) │
│  Security:      Requested Permissive; effective protection unverified (/security)   │
│  Agents.md:     <none>                                                              │
│  Account:       OPENAI_API_KEY from your environment (billed per use)               │
│                                                                                     │
│  Token usage:   0 total  (0 input + 0 output)                                       │
│  Limits:        data not available yet                                              │
╰─────────────────────────────────────────────────────────────────────────────────────╯
