codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_auto_review_permissions.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────────────────────╮
│  >_ Corbanu Terminal (v<V>)                                              │
│                                                                          │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date            │
│ information on rate limits and credits                                   │
│                                                                          │
│  Model:            gpt-5.1-codex-max (reasoning none, summaries auto)    │
│  Directory: [[workspace]]                                                │
│  Permissions:      Next turn: Workspace (Approve for me)                 │
│  Security:         Requested Permissive; effective protection unverified │
│                    (/security)                                           │
│  Agents.md:        <none>                                                │
│                                                                          │
│  Token usage:      0 total  (0 input + 0 output)                         │
│  Context window:   100% left (0 used / 272K)                             │
│  Limits:           data not available yet                                │
╰──────────────────────────────────────────────────────────────────────────╯
