codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_chatgpt_plan_without_email.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────────────╮
│  >_ Corbanu Terminal (v<V>)                                               │
│                                                                           │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date             │
│ information on rate limits and credits                                    │
│                                                                           │
│  Model:         gpt-5.1-codex-max (reasoning none, summaries auto)        │
│  Directory: [[workspace]]                                                 │
│  Permissions:   Next turn: Custom (workspace with network access, Ask for │
│                 approval)                                                 │
│  Security:      Requested Permissive; effective protection unverified (/  │
│                 security)                                                 │
│  Agents.md:     <none>                                                    │
│  Account:       Enterprise (Automation)                                   │
│                                                                           │
│  Limits:        data not available yet                                    │
╰───────────────────────────────────────────────────────────────────────────╯
